# python-project-49

./: .gitignore  Makefile  README.md  demo.brain-calc  demo.brain-gcd  demo.brain-prime  demo.brain-progression  demo.cast  pyproject.toml
brain_games/: cli.py  consts.py  game_logic.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  game_logic.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
