[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Five console games"
authors = ["Ksenia, https://github.com/morin-berk"]
readme = "README.md"
packages = [
    { include = "brain_games" },
    ]
repository = "https://github.com/morin-berk/brain-games"
classifiers = ["Development Status :: 4 - Beta",
               "Environment :: Console",
               "Intended Audience :: Education",
               "License :: Free for non-commercial use",
               "Operating System :: OS Independent",
               "Programming Language :: Python :: 3.10",
               "Topic :: Education"
               ]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"